# baseball-clerk

./: Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
baseballalmanac/: baseballbot.py  comment.py  datastore.py  main.py  mlb.py
baseballclerk/: __main__.py  baseballbot.py  comment.py  datastore.py  main.py  mlb.py  savant.py  util.py
